<resources>
    <string name="account_profile">Profile</string>
    <string name="account_contact_us">Contact Us</string>
    <string name="account_about_us">About Us</string>
    <string name="account_setting">Settings</string>
    <string name="account_profile_desc">In order to make payment faster, please fill in the information first!</string>
    <string name="account_profile_personal_info">Personal Info</string>
    <string name="account_profile_supply_info">Supplementary info</string>
    <string name="account_profile_kyc_info">KYC Documents</string>
    <string name="account_profile_bank_info">Bank Account Info</string>
    <string name="account_profile_mobile_info">Mobile phone authentication</string>
    <string name="phone_code">+91</string>
    <string name="account_profile_phone">True information is helpful to increase the loan amount.</string>
    <string name="account_profile_email">casferre@cadi.com</string>
    <string name="account_profile_get_opt_sms">OTP</string>
    <string name="account_profile_input_sms">Please fill in the verification code of work email.</string>
    <string name="account_profile_commit_info_btn">Submit</string>
    <string name="account_ic_supply_personal">Reference Info</string>
    <string name="account_personal_submit">Submit</string>
    <string name="account_kyc_card">Aadhaar Card</string>
    <string name="account_kyc_pan_card">PAN Card</string>
    <string name="account_kyc_face_recognition">Face Recognition</string>
    <string name="kyc_front">Front</string>
    <string name="kyc_your_photo">Your Photo</string>
    <string name="kyc_submit_and_continue">Submit And Continue</string>
    <string name="kyc_scan_face_error_tip">Please complete Aadhaar card and PAN card authentication first!</string>
    <string name="kyc_first_entry_error_tip">Your Aadhaar card or PAN card is not certified!</string>
    <string name="kyc_scan_back_error_tip">Please complete the front of the Aadhaar card for certification!</string>
    <string name="kyc_scan_pan_error_tip">Please complete Aadhaar card authentication first!</string>
    <string name="kyc_face_scan_failure">live face scan failed, please try again!</string>
    <string name="kyc_scan_face_error_tip_no_aadhaar">Please complete PAN card authentication first!</string>
    <string name="kyc_string_liveness_has_face_and_holdstill_hint">Please hold still</string>
    <string name="kyc_string_liveness_no_face_hint">Please place your face inside the circle</string>
    <string name="kyc_liveness_face_not_valid_hint">Please move away from the screen</string>

    <string name="loan_info_select_gender_title">Gender</string>
    <string name="loan_info_select_language_title">Language</string>
    <string name="loan_info_select_purpose_title">Purpose</string>
    <string name="loan_info_select_education_title">Education Qualification</string>
    <string name="loan_info_select_occupation_title">Occupation</string>
    <string name="loan_info_select_salary_range_title">Salary Range</string>
    <string name="loan_info_select_bank_name_title">Name of the Bank</string>
    <string name="loan_info_select_marital_status_title">Marital Status</string>

    <string name="loan_info_select_company_industry_title">Company Industry</string>
    <string name="loan_info_select_staff_size_title">Staff Size</string>
    <string name="loan_info_select_job_nature_title">Job Nature</string>
    <string name="loan_info_select_level_of_position_title">Level Of Position</string>
    <string name="loan_info_hint_industry_toast">Please select the Company Industry first!</string>


    <string name="loan_info_first_name">First Name As PAN：</string>
    <string name="loan_info_medium_name">Middle Name As PAN(optional)：</string>
    <string name="loan_info_last_name">Last Name As PAN：</string>
    <string name="loan_info_gender">Gender：</string>
    <string name="loan_info_language">Language：</string>
    <string name="loan_info_edu_qua">Education Qualification：</string>
    <string name="loan_info_marital_status">Marital Status：</string>
    <string name="loan_info_purpose">Purpose：</string>
    <string name="loan_info_another_number">Another phone number(optional):</string>
    <string name="loan_info_facebook_account">Facebook account(optional):</string>
    <string name="loan_info_whats_app">Whatsapp account(optional):</string>
    <string name="loan_info_occupation">Occupation：</string>

    <string name="loan_info_company_info">Employment Info</string>
    <string name="loan_info_company_full_name">Company Full Name：</string>
    <string name="loan_info_work_email">Work Email：</string>
    <string name="loan_info_company_tel">Company Tel: </string>
    <string name="loan_info_company_industry">Company Industry: </string>
    <string name="loan_info_job_nature">Job Nature:</string>
    <string name="loan_info_staff_size">Staff Size:</string>
    <string name="loan_info_level_of_position">Level Of Position:</string>
    <string name="loan_info_level_work_since">Working Since: </string>
    <string name="loan_info_level_salary_range">Salary Range：</string>

    <string name="loan_info_phone_hint"> True information is helpful to increase the loan amount.</string>
    <string name="loan_info_employ_name">Salaried-Full Time/Salaried-Part Time</string>
    <string name="loan_info_select">select</string>
    <string name="loan_info_hint_tips">All information submitted cannot modified!</string>


    <string name="loan_info_profile_credit_status_done">[Done]</string>
    <string name="loan_info_profile_credit_status_unverify">[unverified]</string>
    <string name="loan_info_profile_credit_status_loading">[Ongoing]</string>
    <string name="loan_info_profile_credit_status_failure">[Reupload]</string>

    <string name="loan_info_profile_credit_finish_tip">You have completed all the certification programs. Click "Loan Now" to apply for a loan quickly.</string>
    <string name="loan_info_profile_loan_now">Loan Now</string>
    <string name="loan_cancel_dialog_cancel">Cancel</string>

    <string name="loan_info_mall_kyc_loading">Please wait for KYC certification to complete before proceeding!</string>
    <string name="loan_info_credit_kyc_info">Please complete KYC certification first!</string>
    <string name="loan_info_credit_person_info">Please complete the personal information authentication first!</string>
    <string name="loan_info_credit_supplement_info">Please complete Supplementary info certification first!</string>
    <string name="mall_get_now">Get Now</string>
    <string name="mall_loan_duration">Loan duration %1$s Day(s)</string>
    <string name="mall_daily_interest">%1$s %% Daily Interest</string>
    <string name="mall_order_submit_title">Order confirmation</string>
    <string name="mall_order_submit">Sign and submit the order</string>
    <string name="mall_order_submit_loan_agreement"><u>Loan Agreement</u></string>
    <string name="mall_order_submit_sanction_letter"><u>Sanction Letter</u></string>
    <string name="dialog_mall_order_try_again">The current number of orders is too many, please try again!</string>
    <string name="dialog_mall_order_commit_amount_more_than_0_tip">Please select an amount greater than 0 before submitting your order!</string>
    <string name="dialog_mall_order_commit_agreement_tip2">By using E-Signature technology, this agreement shall be protected by law&lt;&lt;&lt;Loan Agreement&gt;&gt;&gt;&amp;law&lt;&lt;&lt;Sanction Letter&gt;&gt;&gt;</string>
    <string name="dialog_main_order_commit_uncheck_tip">Credit report access rights are not selected</string>
    <string name="dialog_mall_order_total_interest">Total interest（%1$s%% Daily Interest):</string>
    <string name="mall_order_submit_loan_duration">%1$s Day(s)</string>

    <string name="loan_info_write_user_info_submit_try_again">The current number of the submit is too many, please try again!</string>
    <string name="loan_info_write_user_info_input_ten_anther_code">Please enter another mobile number with at least ten digits!</string>

    <string name="loan_info_write_work_sms_hint">Please fill in the verification code of work email.</string>
    <string name="loan_info_write_work_company_tel_error_tip">Please enter the correct company phone number!</string>
    <string name="loan_info_write_work_not_first_choice_occupation_toast">Please select the occupation first!</string>
    <string name="loan_info_write_work_first_choice_company_industry_toast">Please select the Company Industry first!</string>
    <string name="loan_info_write_work_info_check_necessary_fill_in_tip">Please check whether the necessary parameters are filled in!</string>

    <string name="loan_info_write_user_info_email_error_tip">Please input the correct email address!</string>
    <string name="loan_info_write_user_info_chose_contact">You cannot select the same person repeatedly, please choose another contact!</string>
    <string name="loan_info_write_user_info_contact_emotion_tip">contact name cannot contain emoticons!</string>
    
    <string name="relatives">Relatives：</string>
    <string name="name">Name：</string>
    <string name="mobile">Mobile：</string>
    <string name="other">Other：</string>

    <string name="other_title">Other</string>

    <string name="relatives_title">Relatives</string>


    <string name="bank_name">Bank Name：</string>
    <string name="bank_number">Bank Account No. ：</string>
    <string name="re_enter_bank_number">Re-enter Bank Account No. ：</string>
    <string name="ifsc_code">IFSC Code：</string>
    <string name="bank_info">Bank Information</string>


    <string name="write_bank_name">Bank Name：</string>
    <string name="write_bank_account_no">Bank Account NO. ：</string>
    <string name="write_bank_re_enter_account_no">Re-enter Bank Account NO. ：</string>
    <string name="write_bank_ifsc_code">IFSC Code：</string>
    <string name="write_bank_inconsistent_tip">The bank card numbers entered twice are inconsistent!</string>
    <string name="write_bank_ifsc_tip">IFSC code is not entered correctly!</string>
    <string name="write_bank_notice">Please fill in the blanks and check carefully, and confirm that it is your bank card. You will get the loan in this account after the approval</string>
    <string name="write_bank_check_bank_info">Please check your account information carefully</string>
    <string name="dialog_bank_check_ifsc_content"> The current IFSC is not included in the system, please make sure it is correct</string>
    <string name="dialog_confirm_downtime">Confirm(%1$ss)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>

</resources>