<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    android:background="@drawable/in_corner_2_white_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView

        android:id="@+id/dialog_bank_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:gravity="center"
        android:paddingStart="@dimen/x10"
        android:paddingEnd="@dimen/x10"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/x16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_ifsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center"
        android:paddingStart="@dimen/x10"
        android:paddingEnd="@dimen/x10"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/x16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:gravity="center"
        android:text="@string/write_bank_check_bank_info"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/x16"
        android:textStyle="bold" />
    <View
        android:layout_marginTop="16dp"
        android:background="#ccc"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50">

        <com.hc.uicomponent.weight.NoDoubleClickButton
            android:id="@+id/confirm_bank"
            android:layout_width="0dp"
            android:layout_height="@dimen/x50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_confirm_downtime"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/x18" />
        <View
            android:background="#ccc"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <com.hc.uicomponent.weight.NoDoubleClickButton
            android:id="@+id/cancel_confirm_bank"
            android:layout_width="0dp"
            android:layout_height="@dimen/x50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/x18" />

    </LinearLayout>

</LinearLayout>
