<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="title"
            type="java.lang.String" />
        <variable
            name="vm"
            type="com.hc.accountinfo.vm.ProfileInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="18dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/account_input_name"
            style="@style/AccountProfileInputInfoTitle"
            android:drawableStart="@drawable/loan_info_employment_info"
            android:drawablePadding="7dp"
            android:text="@string/loan_info_company_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/account_input_name">

            <TextView
                android:text="@string/loan_info_select_occupation_title"
                android:id="@+id/no_title_employ"
                style="@style/AccountProfileInputInfoTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="86dp"
                android:layout_height="23dp"
                android:layout_marginEnd="20dp"
                android:text="select"
                android:textColor="#ff999999"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/not_indicator"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/not_indicator"
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:src="@drawable/account_info_indicate"
                app:layout_constraintBottom_toBottomOf="@id/no_title_employ"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/no_title_employ" />

            <View
                style="@style/AccountProfileLine"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_title_employ" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/account_input_name">

            <TextView
                android:id="@+id/work_title_employ"
                style="@style/AccountProfileInputInfoTitle"
                android:text="@string/loan_info_select_occupation_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/work_text"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:textColorHint="#333333"
                android:textColor="#ff999999"
                android:textSize="16sp"
                android:hint="@string/loan_info_employ_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@null"
                app:layout_constraintTop_toBottomOf="@id/work_title_employ" />


            <View
                style="@style/AccountProfileLine"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/work_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>